--- a/TestCli/.env
+++ b/TestCli/.env
@@ -1,1 +1,1 @@
-OPEN_AI_API_KEY = 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
+OPEN_AI_API_KEY=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
