--- a/aiChatBot/package.json
+++ b/aiChatBot/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "script.js",
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "dev": "node script.js"
     },
@@ -11,7 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.7",
         "dotenv": "^16.0.3",
-        "openai": "^3.2.1"
+        "ffmpeg-static": "^5.2.0",
+        "fluent-ffmpeg": "^2.1.2",
+        "form-data": "^4.0.0",
+        "fs": "^0.0.1-security",
+        "node-microphone": "^0.1.6",
+        "openai": "^3.2.1",
+        "readline": "^1.3.0"
     }
 }
