--- a/aiChatBot/package.json
+++ b/aiChatBot/package.json
@@ -12,13 +12,14 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^1.6.7",
-        "dotenv": "^16.0.3",
+        "dotenv": "^16.4.5",
         "ffmpeg-static": "^5.2.0",
         "fluent-ffmpeg": "^2.1.2",
         "form-data": "^4.0.0",
         "fs": "^0.0.1-security",
         "node-microphone": "^0.1.6",
-        "openai": "^3.2.1",
-        "readline": "^1.3.0"
+        "openai": "^4.28.4",
+        "readline": "^1.3.0",
+        "speaker": "^0.5.4"
     }
 }
